@@ -1,3 +1,8 @@
+2007-06-01  Steve Ellcey  <sje@cup.hp.com>
+
+	* libltdl/m4/libtool.m4 (LT_CMD_MAX_LEN): Try using getconf
+	to set lt_cv_sys_max_cmd_len.
+
 2007-05-31  Paolo Bonzini  <bonzini@gnu.org>
 
 	* ltgcc.m4: Update from GCC.
